# linux_wrapper

src/linux_wrapper/: CMakeLists.txt
src/linux_wrapper/infowrapper/: CMakeLists.txt
src/linux_wrapper/infowrapper/include/: DomainBase.h  DomainFactory.h  UnameBase.h  UnameFactory.h
src/linux_wrapper/infowrapper/src/: Domain.cpp  Domain.h  DomainBase.cpp  DomainFactory.cpp  Uname.cpp  Uname.h  UnameBase.cpp  UnameFactory.cpp
src/linux_wrapper/lnxwrapper/: CMakeLists.txt
src/linux_wrapper/lnxwrapper/src/: main.cpp
src/linux_wrapper/test/: CMakeLists.txt
src/linux_wrapper/test/testinfowrapper/: CMakeLists.txt  TestInfoWrapper.cpp  TestInfoWrapper.h  main.cpp
